# convergence

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup_cli.sh
.github/workflows/: docs.yml
convergence/: __init__.py  __main__.py
convergence/ai/: __init__.py  speech_to_text.py  text_to_speech.py  transcript_generator.py
convergence/api/: __init__.py  app.py  routes.py
convergence/auth/: __init__.py  api_key.py  google_sheets.py  middleware.py  models.py
convergence/core/: __init__.py  generator.py  models.py
convergence/services/: __init__.py  audio.py  gdrive.py  md.py  outline.py  transcript.py
convergence/utils/: __init__.py  console.py  env.py
data/: collection_call_offensive.json
data/configs/: cricket_test.json  gpt_discussion_colleagues.json
docs/: .gitignore  Makefile  SDK_USAGE.md  SELF_HOST.md  api-keys-sheet-template.md  build_test.sh  conf.py  index.rst  requirements.txt  tasks.md
docs/_static/: custom.css  custom.js
docs/api/: modules.rst
docs/home/: API_KEY_MANAGEMENT.md  API_USAGE.md  CONTRIBUTIONS.md  DEV_SETUP.md  FEATURES.md  SDK_USAGE.md  SELF_HOST.md  SETUP.md
docs/press_release/: SOFT_LAUNCH_SOCIALS.md
docs/source/: conf.py
scripts/: key_manager.py  run
scripts/commands/: bandit.sh  build.sh  lint.sh  setup.sh  typecheck.sh
tests/: __init__.py
